# SimpleSearchEngine

./: CMakeLists.txt  Document.cpp  Document.h  Indexer.cpp  Indexer.h  QueryParser.cpp  QueryParser.h  README.md  SearchEngine.cpp  SearchEngine.h  Term.h  Utils.cpp  Utils.h  main.cpp
Data/: test_document.txt
Tests/: DocumentParserTests.cpp
src/: Document.cpp  Document.h  DocumentParser.cpp  DocumentParser.h  Hits.cpp  Hits.h  Indexer.cpp  Indexer.h  QueryParser.cpp  QueryParser.h  SearchEngine.cpp  SearchEngine.h  Term.cpp  Term.h  Utils.cpp  Utils.h  main.cpp
